[package]
name = "YetAnotherFrameworkRust"
version = "0.0.1"
authors = ["liujinlong <yjqqqqdx_01@163.com>"]
description = "Yet Another Framewor for web framework"
license = "MIT"

repository = "https://github.com/kingljl/YetAnotherFrameworkRust.git/krust.rs"
readme = "README.md"
keywords = ["krust", "server", "web", "express"]
[dependencies]
url = "0.2"
time = "0.1"
typemap = "0.3"
plugin = "0.2"
regex = "0.1"
rustc-serialize = "0.3"
log = "0.3"
groupable = "0.2"
mustache = "0.6"
lazy_static = "0.1"
modifier = "0.1"

[dependencies.hyper]
version = "=0.6"
default-features = false

[dependencies.compiletest_rs]
version = "*"
optional = true

[[example]]

name = "logger_middleware"
path = "examples/logger_middleware.rs"

[[example]]

name = "routing"
path = "examples/routing.rs"

[[example]]

name = "enable_cors"
path = "examples/enable_cors.rs"

[[example]]

name = "template"
path = "examples/template.rs"

[[example]]

name = "macro_example"
path = "examples/macro_example.rs"

[[example]]

name = "hello_world"
path = "examples/hello_world.rs"

[[example]]

name = "hello_world_macro"
path = "examples/hello_world_macro.rs"

[[example]]

name = "json"
path = "examples/json.rs"

[[example]]

name = "custom_error_handler"
path = "examples/custom_error_handler.rs"

[[example]]

name = "moved_ownership"
path = "examples/moved_ownership.rs"

[[example]]

name = "route_data"
path = "examples/route_data.rs"

[[example]]

name = "static_files"
path = "examples/static_files.rs"

[[example]]

name = "regex_route"
path = "examples/regex_route.rs"

[[example]]

name = "query_string"
path = "examples/query_string.rs"

[[example]]

name = "mount"
path = "examples/mount.rs"

[[example]]

name = "chaining"
path = "examples/chaining.rs"

[[example]]

name = "form_data"
path = "examples/form_data/form_data.rs"

[[example]]

name = "https"
path = "examples/https.rs"
